--- a/package.json
+++ b/package.json
@@ -12,10 +12,15 @@
   "description": "",
   "devDependencies": {
     "@playwright/test": "^1.50.1",
-    "@types/node": "^22.13.5"
+    "@types/node": "^22.13.5",
+    "lighthouse": "^12.4.0",
+    "playwright": "^1.50.1",
+    "playwright-lighthouse": "^4.0.0"
   },
   "dependencies": {
     "@axe-core/playwright": "^4.10.1",
+    "artillery": "^2.0.21",
+    "node-html-parser": "^7.0.1",
     "playwright-extra": "^4.3.6",
     "puppeteer-extra-plugin-stealth": "^2.11.2"
   }
